results/SVCOMP/houdini/log-StaticCharMethods03-2024_03_19_02_48_43.txt
public class StaticCharMethods03 {
  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
  //@ non_null
  //@ ensures \result < 1;
  //@ ensures \result <= 1;
  //@ ensures \result == 1;
  //@ ensures \result != 1;
  //@ ensures \result >= 1;
  //@ ensures \result > 1;
  //@ ensures \result < 0;
  //@ ensures \result <= 0;
  //@ ensures \result == 0;
  //@ ensures \result != 0;
  //@ ensures \result >= 0;
  //@ ensures \result > 0;
  //@ ensures \result < -1;
  //@ ensures \result <= -1;
  //@ ensures \result == -1;
  //@ ensures \result != -1;
  //@ ensures \result >= -1;
  //@ ensures \result > -1;
  //@ exsures (java.lang.StringIndexOutOfBoundsException ex) (false);
  //@ ensures arg == null ==> \result >= 0;
  //@ ensures arg != null ==> \result >= 0;
  public static int f(String arg) {
    if (arg.length() < 1) return -1;

    char c = arg.charAt(0);
    return (Character.isDefined(c) == false) ? 1 : 0;
  }

  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("123");
    f("&fgaes%");
    f("<bad/>");
  }
}


/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:2: error: illegal start of type
  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
      ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:2: error: Embedded block comment must terminate within the JML line comment
  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
                                                          ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:3: error: illegal start of type
  //@ non_null
      ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:4: error: ';' expected
  //@ ensures \result < 1;
             ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:4: error: Token \result is not a type
  //@ ensures \result < 1;
              ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:4: error: ';' expected
  //@ ensures \result < 1;
                     ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:4: error: <identifier> expected
  //@ ensures \result < 1;
                       ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:4: error: illegal start of type
  //@ ensures \result < 1;
                        ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:32: error: illegal start of type
  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
      ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:32: error: unclosed comment
  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
                                                          ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:42: error: reached end of file while parsing
11 errors

public class StaticCharMethods03 {
  //@ non_null
  //@ ensures \result < 1;
  //@ ensures \result <= 1;
  //@ ensures \result == 1;
  //@ ensures \result != 1;
  //@ ensures \result >= 1;
  //@ ensures \result > 1;
  //@ ensures \result < 0;
  //@ ensures \result <= 0;
  //@ ensures \result == 0;
  //@ ensures \result != 0;
  //@ ensures \result >= 0;
  //@ ensures \result > 0;
  //@ ensures \result < -1;
  //@ ensures \result <= -1;
  //@ ensures \result == -1;
  //@ ensures \result != -1;
  //@ ensures \result >= -1;
  //@ ensures \result > -1;
  //@ exsures (java.lang.StringIndexOutOfBoundsException ex) (false);
  //@ ensures arg == null ==> \result >= 0;
  //@ ensures arg != null ==> \result >= 0;
  public static int f(String arg) {
    if (arg.length() < 1) return -1;

    char c = arg.charAt(0);
    return (Character.isDefined(c) == false) ? 1 : 0;
  }

  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("123");
    f("&fgaes%");
    f("<bad/>");
  }
}


/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:31: error: illegal start of type
  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
      ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:31: error: unclosed comment
  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
                                                          ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:41: error: reached end of file while parsing
4 errors

public class StaticCharMethods03 {
  //@ ensures \result < 1;
  //@ ensures \result <= 1;
  //@ ensures \result == 1;
  //@ ensures \result != 1;
  //@ ensures \result >= 1;
  //@ ensures \result > 1;
  //@ ensures \result < 0;
  //@ ensures \result <= 0;
  //@ ensures \result == 0;
  //@ ensures \result != 0;
  //@ ensures \result >= 0;
  //@ ensures \result > 0;
  //@ ensures \result < -1;
  //@ ensures \result <= -1;
  //@ ensures \result == -1;
  //@ ensures \result != -1;
  //@ ensures \result >= -1;
  //@ ensures \result > -1;
  //@ exsures (java.lang.StringIndexOutOfBoundsException ex) (false);
  //@ ensures arg == null ==> \result >= 0;
  //@ ensures arg != null ==> \result >= 0;
  public static int f(String arg) {
    if (arg.length() < 1) return -1;

    char c = arg.charAt(0);
    return (Character.isDefined(c) == false) ? 1 : 0;
  }

  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("123");
    f("&fgaes%");
    f("<bad/>");
  }
}


/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:30: error: illegal start of type
  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
      ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:30: error: unclosed comment
  //@ */ throws java.lang.StringIndexOutOfBoundsException /* Houdini inferred exceptions
                                                          ^
/home/max/Documents/JMLGPT/tmp/StaticCharMethods03.java:40: error: reached end of file while parsing
3 errors

public class StaticCharMethods03 {
  //@ ensures \result < 1;
  //@ ensures \result <= 1;
  //@ ensures \result == 1;
  //@ ensures \result != 1;
  //@ ensures \result >= 1;
  //@ ensures \result > 1;
  //@ ensures \result < 0;
  //@ ensures \result <= 0;
  //@ ensures \result == 0;
  //@ ensures \result != 0;
  //@ ensures \result >= 0;
  //@ ensures \result > 0;
  //@ ensures \result < -1;
  //@ ensures \result <= -1;
  //@ ensures \result == -1;
  //@ ensures \result != -1;
  //@ ensures \result >= -1;
  //@ ensures \result > -1;
  //@ exsures (java.lang.StringIndexOutOfBoundsException ex) (false);
  //@ ensures arg == null ==> \result >= 0;
  //@ ensures arg != null ==> \result >= 0;
  public static int f(String arg) {
    if (arg.length() < 1) return -1;

    char c = arg.charAt(0);
    return (Character.isDefined(c) == false) ? 1 : 0;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("");
    f("123");
    f("&fgaes%");
    f("<bad/>");
  }
}


OpenJML not responding. Aborted.
